--- a/popup.html
+++ b/popup.html
@@ -464,7 +464,7 @@
           <div class="button-group">
             <button id="saveToArchiveBtn" class="btn-secondary">
               <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-3m-1 4l-3 3m0 0l-3-3m3 3V4"></path></svg>
-              <span data-i18n-key="saveV1Button">Save (V1)</span>
+              <span data-i18n-key="saveAdButton">Anzeige speichern</span>
             </button>
              <button id="viewArchiveBtn" class="btn-secondary">
               <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"></path></svg>
@@ -581,7 +581,7 @@
         <ul>
           <li data-i18n-html-key="howToUseStepInput"><strong>Input Content:</strong> Paste your product description, landing page text, or offer details into the "Input Content" area.</li>
           <li data-i18n-html-key="howToUseStepStyle"><strong>Copywriter Style & Ansprache:</strong> Select a famous copywriter's style (or default) and choose the form of address (Du/Sie).</li>
-          <li data-i18n-html-key="howToUseStepGenerate"><strong>Generate:</strong> Click "Generate Ad Copy" to create Primary Text, Headline, and Description. The tool will attempt to generate 3 versions.</li>
+          <li data-i18n-html-key="howToUseStepGenerate"><strong>Generate:</strong> Click "Generate Ad Copy" to create Primary Text, Headline, and Description. The tool will attempt to generate 3 versions. All generated versions will be shown in tabs.</li>
           <li data-i18n-html-key="howToUseStepReviewV1"><strong>Review & Copy (Version 1):</strong> The first generated version is shown in the main "Ad Preview" boxes. These fields are editable. Click the copy icon next to each field (Primary Text, Headline, Description) to copy that part of Version 1 to your clipboard.</li>
           <li data-i18n-html-key="howToUseStepReviewTabs"><strong>Review & Copy (All Versions - Tabs):</strong> Below the Version 1 preview, a tabbed section will appear.
             <ul>
@@ -590,8 +590,8 @@
               <li data-i18n-html-key="howToUseStepReviewTabsSub3">Click the copy icon next to any version's text to copy it.</li>
             </ul>
           </li>
-          <li data-i18n-html-key="howToUseStepSaveV1"><strong>Save (V1):</strong> Click "Save (V1)" to store the current input, selections, and the first generated (or edited) ad copy to the archive.</li>
-          <li data-i18n-html-key="howToUseStepArchive"><strong>Archive:</strong> Click "Archive" to view, load (Version 1 only), or delete previously saved ad copies.</li>
+          <li data-i18n-html-key="howToUseStepSaveAd"><strong>Save Ad:</strong> Click "Save Ad" to store the current input, selections, and all generated ad versions to the archive.</li>
+          <li data-i18n-html-key="howToUseStepArchive"><strong>Archive:</strong> Click "Archive" to view, load, or delete previously saved ad sets. Loading an ad set will restore all its versions.</li>
           <li data-i18n-html-key="howToUseStepReset"><strong>Reset:</strong> Click "Reset" to clear the input and all preview fields (including tabs). Your text will be saved automatically otherwise.</li>
         </ul>
 
